--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 PORT=3000
+JWT_KEY=token_secret_development
+DB_CONECTION=mongodb+srv://DanielFernandoYepezVelez:2845796@cluster0.iw8eb.mongodb.net/chatFlutter
